--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,10 @@ h4 {
     margin-bottom: 18rem;
   }
 
+  .card-footer {
+    margin-top: -5%;
+  }
+
   .card h1 {
     font-size: 20px;
     margin: 10px;
